--- a/app/src/main/res/layout/activity_all_tasks.xml
+++ b/app/src/main/res/layout/activity_all_tasks.xml
@@ -35,6 +35,7 @@
         android:id="@+id/imageView2"
         android:layout_width="282dp"
         android:layout_height="382dp"
+        android:contentDescription="@string/placeholder_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
