--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         app:subtitleTextColor="#FFFFFF" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/allTasks"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
@@ -30,14 +30,14 @@
         android:background="#00BCD4"
         android:text="@string/all_tasks"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/addTask"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="103dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/my_tasks"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="22sp"
@@ -45,13 +45,13 @@
         app:layout_constraintStart_toStartOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/addTask"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="36dp"
         android:background="#00BCD4"
         android:text="@string/add_task"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/allTasks"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -68,5 +68,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_gallery" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
