--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/mainActivity3">
 
-    <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.chandlerpuckett.taskmaster.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.chandlerpuckett.taskmaster.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+    <activity
+        android:id="@+id/mainActivity3"
+        android:name="com.chandlerpuckett.taskmaster.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" />
+    <activity
+        android:id="@+id/addTask4"
+        android:name="com.chandlerpuckett.taskmaster.AddTask"
+        android:label="activity_add_task"
+        tools:layout="@layout/activity_add_task" />
+    <activity
+        android:id="@+id/allTasks3"
+        android:name="com.chandlerpuckett.taskmaster.AllTasks"
+        android:label="activity_all_tasks"
+        tools:layout="@layout/activity_all_tasks" />
 </navigation>
