--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -7,9 +7,9 @@
     tools:context=".TaskDetail">
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="135dp"
-        android:layout_height="44dp"
+        android:id="@+id/taskTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:text="@string/task_detail"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -52,5 +52,5 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/taskTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
