--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,44 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <CheckBox
-        android:id="@+id/checkBox4"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/groceries"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />
+    <!--    <CheckBox-->
+    <!--        android:id="@+id/checkBox4"-->
+    <!--        android:layout_width="40dp"-->
+    <!--        android:layout_height="40dp"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:layout_marginEnd="10dp"-->
+    <!--        app:layout_constraintEnd_toStartOf="@+id/groceries"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />-->
 
-    <Button
-        android:id="@+id/groceries"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:background="#5C00C853"
-        android:text="@string/groceries"
-        app:layout_constraintEnd_toEndOf="@+id/allTasks"
-        app:layout_constraintTop_toBottomOf="@+id/homework" />
+    <!--    <Button-->
+    <!--        android:id="@+id/groceries"-->
+    <!--        android:layout_width="200dp"-->
+    <!--        android:layout_height="40dp"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:background="#5C00C853"-->
+    <!--        android:text="@string/groceries"-->
+    <!--        app:layout_constraintEnd_toEndOf="@+id/allTasks"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/homework" />-->
 
-    <Button
-        android:id="@+id/doLaundry"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="148dp"
-        android:background="#5C00C853"
-        android:text="@string/laundry"
-        app:layout_constraintEnd_toEndOf="@+id/homework"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+    <!--    <Button-->
+    <!--        android:id="@+id/doLaundry"-->
+    <!--        android:layout_width="200dp"-->
+    <!--        android:layout_height="40dp"-->
+    <!--        android:layout_marginTop="148dp"-->
+    <!--        android:background="#5C00C853"-->
+    <!--        android:text="@string/laundry"-->
+    <!--        app:layout_constraintEnd_toEndOf="@+id/homework"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
 
-    <Button
-        android:id="@+id/homework"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:background="#5C00C853"
-        android:text="@string/homework"
-        app:layout_constraintEnd_toEndOf="@+id/groceries"
-        app:layout_constraintTop_toBottomOf="@+id/doLaundry" />
+    <!--    <Button-->
+    <!--        android:id="@+id/homework"-->
+    <!--        android:layout_width="200dp"-->
+    <!--        android:layout_height="40dp"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:background="#5C00C853"-->
+    <!--        android:text="@string/homework"-->
+    <!--        app:layout_constraintEnd_toEndOf="@+id/groceries"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/doLaundry" />-->
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar3"
@@ -89,12 +89,11 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         android:background="#00BCD4"
         android:text="@string/add_task"
-        app:layout_constraintEnd_toStartOf="@+id/allTasks"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/groceries" />
+        app:layout_constraintTop_toBottomOf="@+id/homeRecyclerView" />
 
     <ImageButton
         android:id="@+id/settingsButton"
@@ -107,33 +106,48 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_menu_manage" />
 
-    <CheckBox
-        android:id="@+id/checkBox6"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/homework"
-        app:layout_constraintStart_toStartOf="@+id/checkBox4"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />
+    <!--    <CheckBox-->
+    <!--        android:id="@+id/checkBox6"-->
+    <!--        android:layout_width="40dp"-->
+    <!--        android:layout_height="40dp"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:layout_marginEnd="10dp"-->
+    <!--        app:layout_constraintEnd_toStartOf="@+id/homework"-->
+    <!--        app:layout_constraintStart_toStartOf="@+id/checkBox4"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />-->
 
-    <CheckBox
-        android:id="@+id/checkBox7"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/doLaundry"
-        app:layout_constraintStart_toStartOf="@+id/checkBox6"
-        app:layout_constraintTop_toTopOf="@+id/doLaundry" />
+    <!--    <CheckBox-->
+    <!--        android:id="@+id/checkBox7"-->
+    <!--        android:layout_width="40dp"-->
+    <!--        android:layout_height="40dp"-->
+    <!--        android:layout_marginEnd="10dp"-->
+    <!--        app:layout_constraintEnd_toStartOf="@+id/doLaundry"-->
+    <!--        app:layout_constraintStart_toStartOf="@+id/checkBox6"-->
+    <!--        app:layout_constraintTop_toTopOf="@+id/doLaundry" />-->
 
     <TextView
         android:id="@+id/usernameDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toTopOf="@+id/doLaundry"
-        app:layout_constraintStart_toStartOf="@+id/checkBox7" />
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:text="testing" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/homeRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
