--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="80dp"
         android:text="@string/task_detail"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintStart_toStartOf="@+id/taskDetailBody"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.Toolbar
@@ -33,7 +33,7 @@
         app:subtitleTextColor="#FFFFFF" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/taskDetailBody"
         android:layout_width="289dp"
         android:layout_height="290dp"
         android:text="@string/lorem_ipsum"
@@ -43,14 +43,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/taskDetailState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="54dp"
         android:layout_marginBottom="14dp"
         android:text="@string/task_description"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintBottom_toTopOf="@+id/taskDetailBody"
+        app:layout_constraintStart_toStartOf="@+id/taskDetailBody"
         app:layout_constraintTop_toBottomOf="@+id/taskTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
